# django-analytical

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  release.yml  test.yml
analytical/: __init__.py  context_processors.py  geckoboard.py  models.py  utils.py
analytical/chartbeat/: __init__.py
analytical/chartbeat/templatetags/: chartbeat.py
analytical/clicky/: __init__.py
analytical/clicky/templatetags/: clicky.py
analytical/context_providers/: matomo.py
analytical/crazy_egg/: __init__.py
analytical/crazy_egg/templatetags/: crazy_egg.py
analytical/google_analytics/: __init__.py
analytical/google_analytics/templatetags/: google_analytics.py
analytical/hubspot/: __init__.py
analytical/hubspot/templatetags/: hubspot.py
analytical/kiss_insights/: __init__.py
analytical/kiss_insights/templatetags/: kiss_insights.py
analytical/kiss_metrics/: __init__.py
analytical/kiss_metrics/templatetags/: kiss_metrics.py
analytical/mixpanel/: __init__.py
analytical/mixpanel/templatetags/: mixpanel.py
analytical/optimizely/: __init__.py
analytical/optimizely/templatetags/: optimizely.py
analytical/services/: __init__.py  base.py  chartbeat.py  clicky.py  console.py  crazy_egg.py  google_analytics.py  kiss_insights.py  kiss_metrics.py  kissinsights.py  kissmetrics.py  mixpanel.py  optimizely.py
analytical/templatetags/: analytical.py  chartbeat.py  clickmap.py  clicky.py  content_square.py  crazy_egg.py  facebook_pixel.py  gauges.py  google_analytics.py  google_analytics_gtag.py  google_analytics_js.py  google_gtag_js.py  gosquared.py  heap.py  hotjar.py  hubspot.py  intercom.py  kiss_insights.py  kiss_metrics.py  liveinternet.py  luckyorange.py  matomo.py  mixpanel.py  olark.py  optimizely.py  performable.py  piwik.py  rating_mailru.py  reinvigorate.py  snapengage.py  spring_metrics.py  uservoice.py  woopra.py  yandex_metrica.py
analytical/tests/: __init__.py  settings.py  test_geckoboard.py  test_services.py  test_tag_analytical.py  test_tag_chartbeat.py  test_tag_clickmap.py  test_tag_clicky.py  test_tag_crazy_egg.py  test_tag_facebook_pixel.py  test_tag_gauges.py  test_tag_google_analytics.py  test_tag_google_analytics_gtag.py  test_tag_google_analytics_js.py  test_tag_google_gtag_js.py  test_tag_gosquared.py  test_tag_hotjar.py  test_tag_hubspot.py  test_tag_intercom.py  test_tag_kiss_insights.py  test_tag_kiss_metrics.py  test_tag_matomo.py  test_tag_mixpanel.py  test_tag_olark.py  test_tag_optimizely.py  test_tag_performable.py  test_tag_piwik.py  test_tag_rating_mailru.py  test_tag_reinvigorate.py  test_tag_snapengage.py  test_tag_spring_metrics.py  test_tag_uservoice.py  test_tag_woopra.py  test_tag_yandex_metrica.py  test_template_tags.py  test_utils.py  utils.py
analytical/tests/services/: __init__.py  test_base.py  test_chartbeat.py  test_clicky.py  test_console.py  test_crazy_egg.py  test_google_analytics.py  test_kiss_insights.py  test_kiss_metrics.py  test_kissinsights.py  test_kissmetrics.py  test_mixpanel.py  test_optimizely.py
analytical/tests/templatetags/: dummy.py
docs/: conf.py  features.rst  history.rst  index.rst  install.rst  license.rst  quick.rst  services.rst  settings.rst  tutorial.rst
docs/.ext/: local.py
docs/_ext/: local.py
docs/services/: chartbeat.rst  clickmap.rst  clicky.rst  content_square.rst  crazy_egg.rst  facebook_pixel.rst  gauges.rst  geckoboard.rst  google_analytics.rst  google_analytics_gtag.rst  google_analytics_js.rst  google_gtag_js.rst  gosquared.rst  heap.rst  hotjar.rst  hubspot.rst  index.rst  intercom.rst  kiss_insights.rst  kiss_metrics.rst  kissinsights.rst  liveinternet.rst  luckyorange.rst  matomo.rst  mixpanel.rst  olark.rst  optimizely.rst  performable.rst  piwik.rst  rating_mailru.rst  reinvigorate.rst  snapengage.rst  spring_metrics.rst  uservoice.rst  woopra.rst  yandex_metrica.rst
tests/testproject/: settings.py
tests/testproject/templatetags/: dummy.py
tests/unit/: test_tag_analytical.py  test_tag_chartbeat.py  test_tag_clickmap.py  test_tag_clicky.py  test_tag_content_square.py  test_tag_crazy_egg.py  test_tag_facebook_pixel.py  test_tag_gauges.py  test_tag_google_analytics.py  test_tag_google_analytics_gtag.py  test_tag_google_analytics_js.py  test_tag_gosquared.py  test_tag_heap.py  test_tag_hotjar.py  test_tag_hubspot.py  test_tag_intercom.py  test_tag_kiss_insights.py  test_tag_kiss_metrics.py  test_tag_liveinternet.py  test_tag_luckyorange.py  test_tag_matomo.py  test_tag_mixpanel.py  test_tag_olark.py  test_tag_optimizely.py  test_tag_performable.py  test_tag_piwik.py  test_tag_rating_mailru.py  test_tag_snapengage.py  test_tag_spring_metrics.py  test_tag_uservoice.py  test_tag_woopra.py  test_tag_yandex_metrica.py  test_utils.py  utils.py
